Began forward kinematics

--- a/High-School Maths Exercise.ipynb
+++ b/High-School Maths Exercise.ipynb
@@ -435,16 +435,66 @@
     "\n",
     "Source: https://automaticaddison.com/homogeneous-transformation-matrices-using-denavit-hartenberg/\n",
     "\n",
-    "Lets try making one for our beautiful example.\n",
-    "Beginning with the first joint\n",
+    "Lets try making one for our beautiful example. I will walk you through with joint $1$. \n",
+    "\n",
+    "First is the $d_1$ parameter, look at the normal axis - $X_{1|2}$ along the $Z_0$ axis and you get the length of $d_1$. \n",
+    "\n",
+    "Second the ${\\alpha_1}$ angle, lets look again at the example, focusing on $Z_0$ and $Z_1$ along the $X_1$ axis, keep in mind that all axes continue infinitely, so $Z_0$ is going in the same direction as $Z_1$ - the angle is 0. Even in rotation of the joint the $Z_1$ axis remains the same.\n",
+    "\n",
+    "Third one: $r_1$ - along $X_0$ look at the distance between $Z_0$ and $Z_1$, its 0 as well.\n",
+    "\n",
+    "These were our constants, in revolute/prismatic joints there are always 3 constants and 1 variable.\n",
+    "\n",
+    "Foruth one: $\\theta_1$ - the angle between $X_0$ and $X_1$, in our example its 0 but consider the rotation of the second joint, $X_1$ will move along with it, so the angle is variable that we label $\\theta_1$\n",
     "\n",
     "| Joint i | ${\\theta_i}$ (angle) | ${\\alpha_i}$ (angle)     | $r_i$ (length)    | $d_i$ (length)    |\n",
     "| :---    |    :----:            |     :---:                |         ---:      |          ---:     |\n",
     "| 1       |   $\\theta_1$         | 0                        | 0                 | $L1$              |\n",
     "| 2       |   $\\theta_2$         | ${90\\degree}$            | 0                 | 0                 |\n",
     "| 3       |   $\\theta_3$         | 0                        | $L2$              | 0                 |\n",
-    "| 4       |   0                  | 0                        | $L3$              | 0                 | </tr>\r\n",
-    "</table>"
+    "| 4       |   0                  | 0                        | $L3$              | 0                 |\r\n",
+    "\n",
+    "\n",
+    "Thats our DH table, you should be able to understand what the values mean and how are they calculated. Based on this table we will construct our transformation matrix for forward kinematics.\n",
+    "\n",
+    ">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c021bfc9-41e2-4f00-a4ca-d9aca502e493",
+   "metadata": {},
+   "source": [
+    "# 3.1. Forward Kinematics\n",
+    "### Used to obtain the end-effector position position from the parameters of the joints and links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78ff3847-2072-4f5d-bcd0-7b1e683bbc9e",
+   "metadata": {},
+   "source": [
+    "To do that we must move from the first frame to the last frame, by applying the apporpirate transformations, a transformation from frame 0 to frame 1, from frame 1 to frame 2 etc. To find the transformation that describes going from frame $0$ to the end-effector frame $4$ we have to use this formula:\n",
+    "\n",
+    "$\\prescript{0}{n}{T} = \\prescript{0}{1}{T}  \\cdot  \\prescript{1}{2}{T}  \\cdot  \\prescript{2}{3}{T} ... \\prescript{n-1}{n}{T}$\n",
+    "\n",
+    "And to get each transformation we use this one:\n",
+    "\n",
+    "$\\prescript{i-1}{i}{T} = R_x(\\alpha_{i-1}) \\cdot D_x(r_{i-1}) \\cdot R_z(\\theta_i) \\cdot D_z(d_i)$\n",
+    "\n",
+    "$R$ stands for rotation matrix and $D$ for translation.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de655bb0-29ef-43d1-af0b-254f26875be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_forward_kinematics(firstLength, secondLength, angleRotation, angleFirst, angleSecond):\n",
+    "    pass"
    ]
   },
   {
